--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                 <img src="TPLogo11.png" alt="Additional Logo">
             </div>
             <div id="how-to">
-                <a href="HowtoVid.html" target="_blank"><button>How To</button></a>
+                <a href="HowtoVid.html" target="_blank">
+                    <button1>How To</button1>
+                </a>
             </div>
     <div class="language-selection">
         <label for="emp-lang-select">Choose Your Language:</label>
