--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
  
      <title>Pop-up Page - Step 1</title>
     <link rel="stylesheet" href="styles.css">
+        <title>Redirecting...</title>
+    <script>
+        window.location.href = "https://teleperformancemy.github.io/RAF_multilingual/";
+    </script>
+</head>
 </head>
 <body>
     <header class="top-bar">
