--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
  
      <title>Refer A Friend</title>
     <link rel="stylesheet" href="styles.css">
+
+            <title>Redirecting...</title>
+    <script>
+        window.location.href = "https://teleperformancemy.github.io/RAF_multilingual/";
+    </script>
 </head>
 <body>
     <header class="top-bar">
